# Crash-Game-Simulator

./: CMakeLists.txt  CMakePresets.json  README.md  notes.md
.devcontainer/: Dockerfile  devcontainer.json
include/crashgame/: header.h
include/crashgame/include/: crash_game.h  data.h
include/crashgame/src/: crash_game.cpp  data.cpp
include/crashgameutils/: header.h
include/crashgameutils/include/: utils.h
include/crashgameutils/src/: utils.cpp
include/slot/: header.h
include/slot/include/: chacha.h  game.h  namespace.h  platform.h  slot_typedefs.h  spin_methods.h  typedefs.h  win_methods.h
src/: config.h  main.cpp  scenarios.h
test/: chacha_tests.cpp  crash_game_tests.cpp  data_collector_tests.cpp  game_tests.cpp  namespace_tests.cpp  spin_tests.cpp  test.txt  utils_tests.cpp  win_rule_tests.cpp  winning_tests.cpp
